--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -97,7 +97,7 @@
 
 % journal papers
 @article{Ryu--Ganguly--Kim--Noh--Lee2018,
-  abbr={TIT},
+  abbr={TransIT},
   title={Nearest neighbor density functional estimation from inverse {L}aplace transform},
   author={Ryu*, J. Jon and Ganguly*, Shouvik and Kim, Young-Han and Noh, Yung-Kyun and Lee, Daniel D.},
   journal=tit,
@@ -116,7 +116,7 @@
 }
 
 @article{Ryu--Bhatt2024,
-  abbr={TIT},
+  abbr={TransIT},
   title={On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies},
   author={Ryu, J. Jon and Bhatt, Alankrita},
   year={2024},
