--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -482,7 +482,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   year={2025},
   author+an={1=highlight},
   selected={false},
-  note={In preparation.}
+  note={Submitted.}
 }
 
 # unpublished technical reports
