Update lifted score estimation

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -70,7 +70,6 @@
 % PHYSICS
 @STRING{pre="Phys. Rev. E. Statist. Phys. Plasmas Fluids Relat. Interdiscip. Topics"}
 
-
 % ETC.
 @STRING{ploscompbio="{PL}o{S} Comput. Biol."}
 @STRING{advece="Adv. Electr. Comput. Eng."}
@@ -465,16 +464,6 @@ The utility of the proposed approach is demonstrated through experiments for joi
 } % ; ``reject and resubmit'' from <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i><br>
 
 # working papers
-@unpublished{Jayashankar--Ryu--Xu--Wornell2024,
-  abbr={working},
-  title={Lifted Residual Score Estimation},
-  author={Jayashankar*, Tejas and Ryu*, J. Jon and Xu, Xiangxiang and Wornell, Gregory W.},
-  year={2024},
-  author+an={2=highlight},
-  selected={false},
-  note={Submitted. <a href="https://openreview.net/forum?id=5wdY7N5hNn">{An extended abstract}</a> will be presented at <a href="https://spigmworkshop2024.github.io/">{ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling}</a>.}
-}
-
 @unpublished{Ryu--Yeddanapudi--Xu--Wornell2025,
   abbr={working},
   title={Contrastive Predictive Coding Done Right for Mutual Information Estimation},
@@ -486,6 +475,16 @@ The utility of the proposed approach is demonstrated through experiments for joi
 }
 
 # unpublished technical reports
+@report{Jayashankar--Ryu--Xu--Wornell2024,
+  abbr={Tech. Report},
+  title={Lifted Residual Score Estimation},
+  author={Jayashankar*, Tejas and Ryu*, J. Jon and Xu, Xiangxiang and Wornell, Gregory W.},
+  year={2024},
+  author+an={2=highlight},
+  selected={false},
+  note={<a href="https://openreview.net/forum?id=5wdY7N5hNn">{An extended abstract}</a> was presented at <a href="https://spigmworkshop2024.github.io/">{ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling}</a>.}
+}
+
 @report{Ryu--Kim2022,
   abbr={arXiv},
   title={An Information-Theoretic Proof of {K}ac--{B}ernstein Theorem},
