Update papers.bib; add pdf files

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -124,7 +124,8 @@
   author+an={1=highlight},
   journal=tit,
   arxiv={2207.12382},
-  html={},
+  html={https://ieeexplore.ieee.org/document/10645704},
+  pdf={tit2024.pdf},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   selected={true},
   abstract={This paper considers the problem of constructing a confidence sequence, which is a sequence of confidence intervals that hold uniformly over time, for estimating the mean of bounded real-valued random processes.
@@ -207,9 +208,9 @@ A concrete example of dot-product kernels over hypersphere is provided to illust
   booktitle=aistats,
   arxiv={2202.02406},
   html={https://proceedings.mlr.press/v151/ryu22a.html},
-  month = 	 mar,
+  month=mar,
   vol={151},
-  pages = 	 {6022--6044},
+  pages={6022--6044},
   pdf={aistats2022.pdf},
   poster={aistats2022-poster.pdf},
   code={https://github.com/jongharyu/olo-with-side-information},
@@ -231,10 +232,11 @@ By modifying the context-tree weighting technique of Willems, Shtarkov, and Tjal
   author+an={1=equal;2=highlight,equal},
   arxiv={2202.02431},
   html={https://proceedings.mlr.press/v206/bhatt23a.html},
-  pages = 	 {4147--4163},
-  volume = 	 {206},
-  month = 	 apr,
+  pages={4147--4163},
+  volume={206},
+  month=apr,
   booktitle=aistats,
+  pdf={aistats2023.pdf},
   abstract={A new portfolio selection strategy that adapts to a continuous side-information sequence is presented, with a universal wealth guarantee against a class of state-constant rebalanced portfolios with respect to a state function that maps each side-information symbol to a finite set of states.
 In particular, given that a state function belongs to a collection of functions of finite Natarajan dimension, the proposed strategy is shown to achieve, asymptotically to first order in the exponent, the same wealth as the best state-constant rebalanced portfolio with respect to the best state function, chosen in hindsight from observed market.
 This result can be viewed as an extension of the seminal work of Cover and Ordentlich (1996) that assumes a single state function.},
@@ -251,6 +253,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   author+an={3=highlight},
   arxiv={1911.04018},
   html={https://ieeexplore.ieee.org/document/9054074},
+  pdf={icassp2020.pdf},
   abstract={In this work, we propose a new recurrent autoencoder architecture, termed Feedback Recurrent AutoEncoder (FRAE), for online compression of sequential data with temporal dependency. The recurrent structure of FRAE is designed to efficiently extract the redundancy along the time dimension and allows a compact discrete representation of the data to be learned. We demonstrate its effectiveness in speech spectrogram compression. Specifically, we show that the FRAE, paired with a powerful neural vocoder, can produce high-quality speech waveforms at a low, fixed bitrate. We further show that by adding a learned prior for the latent space and using an entropy coder, we can achieve an even lower variable bitrate.},
 }
 
@@ -262,6 +265,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   month={September},
   school={University of California San Diego},
   html={https://escholarship.org/uc/item/5fc8x66w},
+  pdf={thesis.pdf},
   abstract={This dissertation illustrates how certain information-theoretic ideas and views on learning problems can lead to new algorithms via concrete examples.The three information-theoretic strategies taken in this dissertation are (1) to abstract out the gist of a learning problem in the infinite-sample limit; (2) to reduce a learning problem into a probability estimation problem and plugging-in a "good" probability; and (3) to adapt and apply relevant results from information theory. These are applied to three topics in machine learning, including representation learning, nearest-neighbor methods, and universal information processing, where two problems are studied from each topic.},
 }
 
@@ -275,6 +279,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   primaryClass={cs.LG},
   arxiv={2302.08077},
   year={2024},
+  pdf={isit2024.pdf},
   author+an={3=highlight},
   note={<a href="https://openreview.net/forum?id=QOe0ekZkCQ">{A preliminary version}</a> of this manuscript was presented at <a href="https://icml.cc/virtual/2023/workshop/21493">ICML 2023 Workshop on Spurious Correlations, Invariance, and Stability</a>.},
   abstract={Learning a fair predictive model is crucial to mitigate biased decisions against minority groups in high-stakes applications.
@@ -301,6 +306,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   html={https://openreview.net/forum?id=qESG5HaaoJ},
   poster={icml2024-neuralsvd-poster.pdf},
   code={https://github.com/jongharyu/neural-svd},
+  pdf={icml2024a.pdf},
   abstract={Computing eigenvalue decomposition (EVD) of a given linear operator, or finding its leading eigenvalues and eigenfunctions,
 is a fundamental task in many machine learning and scientific computing problems.
 For high-dimensional eigenvalue problems, training neural networks to parameterize the eigenfunctions is considered as a promising alternative to the classical numerical linear algebra techniques.
@@ -324,6 +330,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   html={https://openreview.net/forum?id=mu7Er7f9NQ},
   selected={true},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
+  pdf={icml2024b.pdf},
   poster={icml2024-gambling-poster.pdf},
   abstract={A confidence sequence (CS) is a sequence of confidence sets that contains a target parameter of an underlying stochastic process at any time step with high probability.
   This paper proposes a new approach to constructing CSs for means of bounded multivariate stochastic processes using a general gambling framework, extending the recently established coin toss framework for bounded random processes.
@@ -346,6 +353,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   arxiv={2402.06160},
   selected={false},
   code={https://github.com/maohaos2/EDL-Mirage},
+  pdf={neurips2024.pdf},
   abstract={This paper questions the effectiveness of a modern predictive uncertainty quantification approach, called \emph{evidential deep learning} (EDL), in which a single neural network model is trained to learn a meta distribution over the predictive distribution by minimizing a specific objective function. Despite their perceived strong empirical performance on downstream tasks, a line of recent studies by Bengs et al. identify limitations of the existing methods to conclude their learned epistemic uncertainties are unreliable, e.g., in that they are non-vanishing even with infinite data. Building on and sharpening such analysis, we 1) provide a sharper understanding of the asymptotic behavior of a wide class of EDL methods by unifying various objective functions; 2) reveal that the EDL methods can be better interpreted as an out-of-distribution detection algorithm based on energy-based-models; and 3) conduct extensive ablation studies to better assess their empirical effectiveness with real-world datasets. Through all these analyses, we conclude that even when EDL methods are empirically effective on downstream tasks, this occurs despite their poor uncertainty quantification capabilities. Our investigation suggests that incorporating model uncertainty can help EDL methods faithfully quantify uncertainties and further improve performance on representative downstream tasks, albeit at the cost of additional computational complexity.},
   html={https://openreview.net/forum?id=P6nVDZRZRB},
   poster={neurips2024-poster.pdf},
@@ -366,6 +374,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   arxiv={2409.18209},
   selected={true},
   poster={icml2025-nce-poster.pdf},
+  pdf={icml2025b.pdf},
 }
 
 @inproceedings{Jayashankar--Ryu--Wornell2025,
@@ -384,6 +393,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   selected = {true},
   note={Spotlight (top 2.6%)},
   poster={icml2025-smt-poster.pdf},
+  pdf={icml2025a.pdf},
   code={https://github.com/tkj516/score-of-mixture-training},
 }
 
@@ -399,6 +409,8 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   archivePrefix={arXiv},
   eprint={2502.10826},
   arxiv={2502.10826},
+  pdf={colt2025.pdf},
+  code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   selected={true},
 }
 
