--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -279,6 +279,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   primaryClass={cs.LG},
   arxiv={2302.08077},
   year={2024},
+  month=jul,
   pdf={isit2024.pdf},
   author+an={3=highlight},
   note={<a href="https://openreview.net/forum?id=QOe0ekZkCQ">{A preliminary version}</a> of this manuscript was presented at <a href="https://icml.cc/virtual/2023/workshop/21493">ICML 2023 Workshop on Spurious Correlations, Invariance, and Stability</a>.},
@@ -347,6 +348,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   author={Shen*, Maohao and Ryu*, J. Jon and Ghosh, Soumya and Bu, Yuheng and Sattigeri, Prasanna and Das, Subhro and Wornell, Gregory W.},
   author+an={2=highlight},
   year={2024},
+  month=dec,
   booktitle=neurips,
   archivePrefix={arXiv},
   primaryClass={cs.LG},
@@ -402,6 +404,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   title={Improved Offline Contextual Bandits with Second-Order Bounds: Betting and Freezing},
   author={Ryu, J. Jon and Kwon, Jeongyeol and Koppe, Benjamin and Jun, Kwang-Sung},
   year={2025},
+  month=jun,
   booktitle=colt,
   author+an={1=highlight},
   abstract={We consider off-policy selection and learning in contextual bandits, where the learner aims to select or train a reward-maximizing policy using data collected by a fixed behavior policy. Our contribution is two-fold. First, we propose a novel off-policy selection method that leverages a new betting-based confidence bound applied to an inverse propensity weight sequence. Our theoretical analysis reveals that this method achieves a significantly improved, variance-adaptive guarantee over prior work. Second, we propose a novel and generic condition on the optimization objective for off-policy learning that strikes a different balance between bias and variance. One special case, which we call freezing, tends to induce low variance, which is preferred in small-data regimes. Our analysis shows that it matches the best existing guarantees. In our empirical study, our selection method outperforms existing methods, and freezing exhibits improved performance in small-sample regimes.},
@@ -419,6 +422,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   title={Efficient Parametric SVD of Koopman Operator for Stochastic Dynamical Systems},
   author={Jeong*, Minchan and Ryu*, J. Jon and Yun, Se-Young and Wornell, Gregory W.},
   year={2025},
+  month=dec,
   booktitle=neurips,
   author+an={2=highlight},
   eprint={2507.07222},
@@ -435,6 +439,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   title={Revisiting Orbital Minimization Method for Neural Operator Decomposition},
   author={Ryu, J. Jon and Zhou, Samuel and Wornell, Gregory W.},
   year={2025},
+  month=dec,
   booktitle=neurips,
   author+an={1=highlight},
   selected={true},
