Update NeurIPS papers

--- a/_news/2025_09_18_neurips.md
+++ b/_news/2025_09_18_neurips.md
@@ -3,5 +3,5 @@ layout: post
 date: 2025-09-19 00:00:00-0000
 inline: true
 ---
-Two papers on parametric spectral decomposition got accepted at NeurIPS 2025!
+Two papers [[1](https://arxiv.org/abs/2507.07222), [2](https://arxiv.org/abs/2510.21952)] on parametric spectral decomposition got accepted at NeurIPS 2025!
 (Update on 10/17/2025: also recognized as a Top Reviewer!)
