--- a/_news/2024_05_01_icml.md
+++ b/_news/2024_05_01_icml.md
@@ -4,4 +4,4 @@ date: 2024-05-01 00:00:00-0000
 inline: true
 ---
 
-Two papers, [one **Spotlight** (top 3.5%)](https://openreview.net/forum?id=mu7Er7f9NQ) and [one poster](https://openreview.net/forum?id=qESG5HaaoJ), accepted at ICML 2024!
+Two papers, [one <span style="color:#e74c3c; font-weight:300;">Spotlight</span> (top 3.5%)](https://openreview.net/forum?id=mu7Er7f9NQ) and [one poster](https://openreview.net/forum?id=qESG5HaaoJ), accepted at ICML 2024!
