--- a/_news/2025_05_02_icml_colt.md
+++ b/_news/2025_05_02_icml_colt.md
@@ -3,4 +3,4 @@ layout: post
 date: 2025-05-03 00:00:00-0000
 inline: true
 ---
-Two papers, [one **Spotlight** (top 2.6%)](https://arxiv.org/abs/2502.09609) and [one poster](https://arxiv.org/abs/2409.18209), accepted at ICML 2025, and [one paper](https://arxiv.org/abs/2502.10826) accepted at COLT 2025!
+Two papers, [one <span style="color:#e74c3c; font-weight:300;">Spotlight</span> (top 2.6%)](https://arxiv.org/abs/2502.09609) and [one poster](https://arxiv.org/abs/2409.18209), accepted at ICML 2025, and [one paper](https://arxiv.org/abs/2502.10826) accepted at COLT 2025!
